<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="item_login">登录</string>
    <string name="item_switch_account">注销 / 切换(%s)</string>

    <string name="item_can_out">出入校审核状态%s</string>

    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_captcha">验证码</string>
    <string name="login_username_tip">请输入用户名</string>
    <string name="login_password_tip">请输入密码</string>
    <string name="login_submit">登录</string>
    <string name="login_remember">记住密码</string>
    <string name="login_auto_login">自动登录</string>

    <string name="logging">正在登录中…</string>
    <string name="login_captcha_fail">获取验证码失败,请点击验证码图片重试!</string>

    <string name="login_password_error">您提供的用户名或者密码有误!</string>
    <string name="login_captcha_error">无效的验证码,请重新输入验证码!</string>
    <string name="login_need_username">请输入用户名!</string>
    <string name="login_need_password">请输入密码!</string>
    <string name="login_need_captcha">请输入验证码!</string>
    <string name="login_success">登录成功!</string>

    <string name="login_new">新建</string>
    <string name="login_delete">是否删除账号: %s?</string>

    <string name="login_help"><u>《使用说明》</u></string>
    <string name="login_forget_password"><u>忘记密码?</u></string>
</resources>